# justcode-python-14

./: .gitignore  README.md  req.txt
1_python_module/2/: 1.py  2.py  3.py
1_python_module/6/: 1.py  dict.py  set.py  tuple.py
1_python_module/7.1/: 1.py
1_python_module/7.2/: 1.py  d1.py  d2.py  dictionary.py  task1.py
1_python_module/8.1/: f2.py  f4.py
1_python_module/8.2/: 2.py  f1.py  f3.py  func_high.py  l2.py  l3.py
1_python_module/9/: main1.py  math1.py  random1.py  random2.py
1_python_module/9_2/: datetime1.py  datetime2.py  datetime3.py  os1.py
1_python_module/parser_project/: main.py  news.txt
1_python_module/topic10_1/: с2.py  с3.py
1_python_module/topic10_2/: book_class.py  user_class.py
1_python_module/topic11/: main.py  main2.py
1_python_module/topic12/: ex1.py  ex2.py  file2.py  file3.py
1_python_module/topic13/: ex2.py  ex4.py
1_python_module/topic14/: main.py
1_python_module/topic15/: df_filter.py  from_file.py  idnex_iloc.py  index_loc.py  main.py
1_python_module/topic16/: task1.py  task1_1.py  task2.py  task3.py  test.py
1_python_module/topic17.1/: pyproject.toml
7.1/: 2.py  lists.py  slices.py  strings.py  tuple.py
7.2/: 2.py
8.1/: 1.py  2.py  3.py  f1.py  f3.py  f5.py
8.2/: 1.py  3.py  f2.py  f4.py  l1.py  l4.py  l5.py
9/: 1.py  2.py  main2.py  main3.py
9_2/: datetime4.py  os2.py  time1.py
test/: test.py
topic10_1/: c1.py
topic10_2/: library_class.py  main.py  menu.py
topic11/: people_class.py
topic12/: cm1.py  example.json  file1.py
topic13/: ex1.py  ex3.py  ex5.py
topic14/: main.py
(+206 files in other folders)
