[tool.poetry]
name = "topic17-1"
version = "0.1.0"
description = ""
authors = ["Kospanulan <kospanovulan@gmail.com>"]
readme = "README.md"
packages = [{include = "topic17"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
